Fixed the sticky footer. Added padding to the myApp container, so that the page is no longer cut off. Resolved the issue with the JSON object as it seemed that I was naming the attribute of the project title incorrectly. Need to resolve issues with the portfolio page of the application.

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,7 @@
     background: url("assets/waterColorBackground.jpg") no-repeat center center fixed;
     height: 100%;
     width: 100%;
+    margin-bottom: 0px;
+    padding-bottom: 50px;
     background-size: cover;
 }
